# vision

./: .gitignore  .gitmodules  README.md
devel/: .catkin  .rosinstall  setup.sh
src/uav_msgs/: CMakeLists.txt
src/uav_msgs/msg/: stampedImage.msg
tools_under_development/: README.txt  cameraClickGPS.py  click_to_gps.py
tools_under_development/camera_calibration/: CMakeLists.txt  calibrate_camera.cpp
tools_under_development/image_correction/: CMakeLists.txt  image_correction.cpp
tools_under_development/image_stamping/: image_converter.cpp
vision_ws/: rospy  time
vision_ws/install/: .rosinstall  setup.sh
vision_ws/install/include/click_to_geolocate/: FloatList.h  IntList.h
vision_ws/install/include/sniper_cam/: interopImages.h
vision_ws/install/share/click_to_geolocate/: package.xml
vision_ws/install/share/uav_msgs/: package.xml
vision_ws/src/: roslib
vision_ws/src/GUI/: image_gui.py
vision_ws/src/GUI/images_target_1/: locations_target1_1.txt  locations_target1_2.txt
vision_ws/src/GUI/images_target_2/: locations_target2_1.txt  locations_target2_3.txt
vision_ws/src/click_to_geolocate/: CMakeLists.txt  package.xml
vision_ws/src/click_to_geolocate/launch/: spotter_cam.launch
vision_ws/src/click_to_geolocate/msg/: FW_State.msg
vision_ws/src/click_to_geolocate/scripts/: listener.py  pixel_publisher.py
vision_ws/src/image_stamper/: CMakeLists.txt  package.xml
vision_ws/src/image_stamper/scripts/: image_stamper.py  (+3 more)
vision_ws/src/sniper_cam/: CMakeLists.txt  package.xml
vision_ws/src/uav_msgs/: CMakeLists.txt  package.xml
(+37 files in other folders)
